<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="arrayLanguagesLabels">
        <item>English</item>
    </string-array>
    <string-array name="arrayLanguagesValues">
        <item>English</item>
    </string-array>
    <string-array name="arrayFirstDayOfWeekLables">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="arrayFirstDayOfWeekValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="app_name">Spending Tracker</string>
    <string name="app_description">Spending Tracker</string>
    <string name="spinnerPrompt">Choose a category</string>

    <!-- Dialog -->
    <string name="spentMoneyDialogTitleText">Spent money?</string>
    <string name="addCategoryTitle">Add a category</string>
    <string name="addCategoryMessage">Enter the name of the category</string>
    <string name="deleteCategoryTitle">Delete category?</string>
    <string name="stringDidYouSpend">Did you spend on</string>

    <!-- RADIO BUTTON -->

    <string name="radioButtonMonthlyText">Monthly</string>
    <string name="radioButtonWeeklyText">Weekly</string>
    <string name="radioButtonEverydayText">Everyday</string>

    <!-- EDIT TEXT -->

    <string name="editTextQuickAddAmountHint">Type amount spent</string>
    <string name="editTextCommentHint">Type comment (optional)</string>
    <string name="editTextDayInMonthHint">Day in the month (as number)</string>
    <string name="editTextRowIdHint">Type row id</string>
    <string name="editTextSpentEditDateHint">Date</string>

    <!-- TEXT VIEWS -->

    <string name="textViewAddEntryText">Add an entry</string>
    <string name="textViewSpentTodayText">Total spent today: </string>
    <string name="textViewSpentWeekText">Total spent this week: </string>
    <string name="textViewSpentMonthText">Total spent this month: </string>
    <string name="buttonDeleteAllEnteriesText">Delete all entries</string>
    <string name="textViewEntriesSpentRowIdText">Row ID</string>
    <string name="textViewEntriesSpentAmountText">Amount</string>
    <string name="textViewEntriesSpentCategoryText">Category</string>
    <string name="textViewEntriesSpentDateText">Date</string>
    <string name="textViewEntriesRemindersIdText">ID</string>
    <string name="textViewEntriesRemindersTypeText">Type</string>
    <string name="textViewEntriesRemindersHourText">Hour</string>
    <string name="textViewEntriesRemindersMinText">Min</string>
    <string name="textViewEntriesRemindersDayText">Day</string>
    <string name="textViewAboutVersion">Current Version: </string>

    <!-- BUTTONS -->

    <string name="buttonCategoriesEditText">Edit</string>
    <string name="buttonAddReminderText">Add reminder</string>
    <string name="buttonQuickAddInsertText">Add entry</string>
    <string name="buttonShowTodayEntriesText">Show Today Entries</string>
    <string name="buttonShowWeeklyEntriesText">Show Weekly Entries</string>
    <string name="buttonShowMonthEntriesText">Show Monthly Entries</string>
    <string name="buttonShowTimeReminderEntriesText">Show Time Reminders</string>
    <string name="buttonShowLocationReminderEntriesText">Show Location Reminders</string>
    <string name="buttonSpentEditUpdateText">Update</string>

    <!-- CHECK BOXES -->

    <string name="checkBoxAutoExitText">Auto close</string>
    <string name="checkBoxSaturdayText">Saturday</string>
    <string name="checkBoxSaturdayHint">7</string>
    <string name="checkBoxFridayText">Friday</string>
    <string name="checkBoxFridayHint">6</string>
    <string name="checkBoxThursdayText">Thursday</string>
    <string name="checkBoxThursdayHint">5</string>
    <string name="checkBoxWednesdayText">Wednesday</string>
    <string name="checkBoxWednesdayHint">4</string>
    <string name="checkBoxTuesdayText">Tuesday</string>
    <string name="checkBoxTuesdayHint">3</string>
    <string name="checkBoxMondayText">Monday</string>
    <string name="checkBoxMondayHint">2</string>
    <string name="checkBoxSundayText">Sunday</string>
    <string name="checkBoxSundayHint">1</string>

    <!-- Menu Items -->

    <string name="menuItemReminderDeleteText">Delete</string>
    <string name="menuItemSpentStatisticsTitle">Statistics</string>

    <!-- Alert dialog title -->
    <string name="alertDialogViewEntriesSpentTitleEdit">Edit entry</string>
    <string name="alertDialogViewEntriesSpentTitleDelete">Delete entry</string>
    <string name="alertDialogViewEntriesSpentPositiveEdit">Edit</string>
    <string name="alertDialogViewEntriesSpentPositiveDelete">Delete</string>
    <string name="alertDialogViewEntriesSpentNegative">Cancel</string>
    <string name="alertDialogTitleDeleteReminder">Delete reminder</string>
    <string name="alertDialogExportDatabaseTitle">Export database</string>
    <string name="alertDialogExportDatabaseMessage">Are you sure you want to export?\nThis will delete the current file</string>
    <string name="alertDialogExportDatabasePositive">Export</string>
    <string name="alertDialogExportDatabaseNegative">Cancel</string>
    <string name="alertDialogImportDatabaseTitle">Import database</string>
    <string name="alertDialogImportDatabaseMessage">Are you sure you want to import?\nThis will delete the current database</string>
    <string name="alertDialogImportDatabasePositive">Import</string>
    <string name="alertDialogImportDatabaseNegative">Cancel</string>
    <string name="entryDeleted">Entry Deleted</string>
    <string name="entryUpdated">Entry Updated</string>

    <!-- TABS -->

    <string name="textViewTabTextGeneral">General</string>
    <string name="textViewTabTextTimeReminders">Time</string>
    <string name="textViewTabTextLocationReminders">Location</string>
    <string name="textViewTabTextEntries">Entries</string>
    <string name="dialogPositiveYes">Yes</string>
    <string name="dialogPositiveNo">No</string>
    <string name="dialogTitleDeleteAllEntries">Delete all entries</string>
    <string name="dialogMessageDeleteAllEntries">Are you sure you want to delete all entries?</string>
    <string name="toastMessageEntryAdded">Entry added</string>
    <string name="dialogMessageErrorAddingSpentEntryToUser">Either amount is not filled or category is not chosen!</string>
    <string name="dialogTitleErrorAddingEntryToUser">Error adding entry</string>
    <string name="toastMessageAddedEverydayReminder">"Added Everyday reminder at "</string>
    <string name="toastMessageAddedWeeklyReminderOn">"Added weekly reminder on "</string>
    <string name="toastMessageWithTime">" with time "</string>
    <string name="toastMessageAddedMonthlyReminder">"Added Monthly reminder at "</string>
    <string name="toastMessageEnabledTimeReminderService">Enabled Time Reminder service</string>
    <string name="toastMessageDisabledTimeReminderService">Disabled Time Reminder service</string>
    <string name="toastMessageEnabledLocationReminderService">Enabled Location Reminder service</string>
    <string name="toastMessageDisabledLocationReminderService">Disabled Location Reminder service</string>
    <string name="editTextSpentEditTimeHint">Time</string>
    <string name="textViewEntriesSpentTimeText">Time</string>
    <string name="toastMessageErrorUpdateRecord">Error updating the record</string>
    <string name="textViewAccuracyLabel">Accuracy</string>
    <string name="textViewAltitudeLabel">Altitude</string>
    <string name="textViewBearingLabel">Bearing</string>
    <string name="textViewLatitudeLabel">Latitude</string>
    <string name="textViewLongitudeLabel">Longitude</string>
    <string name="textViewProviderLabel">Provider</string>
    <string name="textViewSpeedLabel">Speed</string>
    <string name="textViewTimeLabel">Time</string>
    <string name="textViewEntriesRemindersLocationNameText">Location</string>
    <string name="editTextLocationNameHint">Short description of the location</string>
    <string name="_rowNumber">#</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="del">Del</string>
    <string name="edit">Edit</string>
    <string name="manage_time_reminders">Manage Time Reminders</string>
    <string name="_">&lt;&lt;&lt;</string>
    <string name="buttonEntriesBackText">Back</string>
    <string name="buttonEntriesNextText">Next</string>
    <string name="number_of_entries">Number of entries</string>
    <string name="average_spending">Average spending</string>
    <string name="max">Max</string>
    <string name="min">Min</string>

</resources>