<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewSpentEditAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewEntriesSpentAmountText" />

    <EditText
        android:id="@+id/editTextSpentEditAmount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textViewSpentEditDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewEntriesSpentDateText" />

    <EditText
        android:id="@+id/editTextSpentEditDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextSpentEditDateHint"
        android:inputType="number"
        android:maxLength="8"
         />
    
   	<TextView
        android:id="@+id/textViewSpentEditTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewEntriesSpentTimeText" />
    

    <EditText
        android:id="@+id/editTextSpentEditTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextSpentEditTimeHint" 
        android:inputType="number"
        android:maxLength="4"
        
        />

    <TextView
        android:id="@+id/textViewSpentEditCategory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewEntriesSpentCategoryText" />
    
    <Spinner
        android:id="@+id/spinnerCategories"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_background"
        android:prompt="@string/spinnerPrompt" />

    <Button
        android:id="@+id/buttonSpentEditUpdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/buttonSpentEditUpdateText" />

</LinearLayout>