<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewSpentToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSpentTodayText"
        android:textAppearance="?android:attr/textAppearanceLarge">
        
        </TextView>

    <TextView
        android:id="@+id/textViewSpentWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSpentWeekText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewSpentMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSpentMonthText"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textViewAddEntry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewAddEntryText"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/editTextEntrySpent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/editTextQuickAddAmountHint"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:weightSum="1.0" >

            <Spinner
                android:id="@+id/spinnerCategories"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:background="@drawable/custom_button"
                android:prompt="@string/spinnerPrompt" />

            <Button
                android:id="@+id/buttonCategoriesEdit"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight=".7"
                android:text="@string/buttonCategoriesEditText" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/editTextCommentHint" >
        </EditText>

        <Button
            android:id="@+id/buttonAddEntrySpent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/buttonQuickAddInsertText" />
        
    </LinearLayout>

</LinearLayout>