<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/category" />

    <TextView
        android:id="@+id/textViewNumberOfEntries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_below="@+id/textViewCategory"
        android:text="@string/number_of_entries" />

    <TextView
        android:id="@+id/textViewAverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNumberOfEntries"
        android:layout_margin="4dp"
        android:text="@string/average_spending" />

    <TextView
        android:id="@+id/textViewMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewAverage"
        android:layout_alignTop="@+id/textViewAverage"
        android:layout_marginLeft="4dp"
        android:text="@string/max" />

    <TextView
        android:id="@+id/textViewMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textViewMax"
        android:layout_alignTop="@+id/textViewAverage"
        android:layout_marginLeft="4dp"
        android:text="@string/min" />

</RelativeLayout>