<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/radioGroupEntries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radioButtonEntriesEveryday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioButtonEverydayText" />

        <RadioButton
            android:id="@+id/radioButtonEntriesWeekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonWeeklyText" />

        <RadioButton
            android:id="@+id/radioButtonEntiresMonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonMonthlyText" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonEntriesBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/radioGroupEntries"
        android:padding="8dp"
        android:text="@string/buttonEntriesBackText" />

    <Button
        android:id="@+id/buttonEntriesNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/radioGroupEntries"
        android:padding="8dp"
        android:text="@string/buttonEntriesNextText" />

    <ListView
        android:id="@+id/listViewEntriesSpent"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/buttonEntriesBack" >
    </ListView>

</RelativeLayout>