<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonDeleteAllEnteries"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/buttonDeleteAllEnteriesText" />

    <Button
        android:id="@+id/buttonDbImport"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/alertDialogImportDatabaseTitle" />
    
    <Button
        android:id="@+id/buttonDbExport"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/alertDialogExportDatabaseTitle" />

</LinearLayout>