<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/buttonDeleteSentLocationNotifications"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Delete sent notifications"
        android:visibility="gone"
        />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <TableLayout
            android:id="@+id/tableLayoutEnteriesReminders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRowLocationHeaderEnteriesReminders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewEntriesRemindersId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/textViewEntriesRemindersIdText" />

                <TextView
                    android:id="@+id/textViewEntriesRemindersLocationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:text="@string/textViewEntriesRemindersLocationNameText" />

                <TextView
                    android:id="@+id/textViewEntriesRemindersAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:text="@string/textViewEntriesSpentAmountText" />

                <TextView
                    android:id="@+id/textViewEntriesRemindersCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:text="@string/textViewEntriesSpentCategoryText" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>